@@ -15,6 +15,7 @@ git-annex (8.20210311) UNRELEASED; urgency=medium
   * unregisterurl: Fix a bug that caused an url to not be unregistered
     when it is claimed by a special remote other than the web.
   * Work around some buggy webdav server behavior involving renaming files.
+  * Make --debug also enable debugging in child git-annex processes.
 
  -- Joey Hess <id@joeyh.name>  Fri, 12 Mar 2021 12:06:37 -0400
 
